--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build" : "tsc"
 	},
 	"repository": {
-		"url": "https://github.com/Moh-Snoussi/keyboard-event-key-type"
+		"url": "https://github.com/Moh-Snoussi/typeit-gpt.git"
 	},
 	"keywords": [
 		"type",
