--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "typeit-gpt",
 	"type": "module",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "TypeIt is a JavaScript/TypeScript library that allows you to type out strings char by char. It's lightweight, customizable, and easy to use.",
 	"main": "lib/TypeItGpt.js",
 	"scripts": {
@@ -32,6 +32,6 @@
 	"author": "Mohamed Snoussi",
 	"license": "ISC",
 	"devDependencies": {
-		"typescript": "*"
+		"typescript": "5.0.2"
 	}
 }
